[gd_scene load_steps=2 format=3 uid="uid://bvsya5kwbgmbb"]

[ext_resource type="Script" path="res://Scripts/InventoryItemClass.gd" id="1_birpu"]

[node name="InventoryItem" type="ColorRect"]
custom_minimum_size = Vector2(96, 96)
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 1
color = Color(0.247059, 0.247059, 0.247059, 0)
script = ExtResource("1_birpu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = -6
theme_override_constants/margin_top = -6
theme_override_constants/margin_right = -6
theme_override_constants/margin_bottom = -6

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
